@startuml

skinparam linetype ortho

entity "teachers" as e01 {
  *id : integer <<pk>>
  --
  *name : text
  area : text
}

entity "courses" as e02 {
  *id : integer <<pk, increment>>
  *title : text
  description : text
  duration_hours : integer
  --
  *teacher_id : integer <<FK>>
}

entity "lessons" as e03 {
  *course_id : integer <<pk>>
  *sequence_number : integer <<pk>>
  --
  *title : text
  content : text
}

entity "students" as e04 {
  *id : integer <<pk>>
  --
  *name : text
  email : text
}

entity "courses_students" as e05 {
  *course_id : integer <<pk>>
  *student_id : integer <<pk>>
}

entity "lessons_students" as e06 {
  *course_id : integer <<pk>>
  *sequence_number : integer <<pk>>
  *student_id : integer <<pk>>
  --
  *finished : date
}

e01 ||..o{ e02
e02 ||..o{ e03
e02 ||..o{ e05
e04 ||..o{ e05
e03 ||..o{ e06
e05 ||..o{ e06

@enduml
